src/test/snapshots/ruby_fast_lsp__test__integration_test__inner_instance_method_call_refs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 15,
        "line": 69
      },
      "start": {
        "character": 4,
        "line": 69
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/method_context_resolution.rb"
  }
]
