src/test/snapshots/ruby_fast_lsp__test__integration_test__inner_singleton_method_deep_call_refs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 20,
        "line": 80
      },
      "start": {
        "character": 6,
        "line": 80
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/method_context_resolution.rb"
  }
]
