src/test/snapshots/ruby_fast_lsp__test__integration_test__log_level_refs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 27,
        "line": 3
      },
      "start": {
        "character": 4,
        "line": 3
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/module_method.rb"
  },
  {
    "range": {
      "end": {
        "character": 16,
        "line": 9
      },
      "start": {
        "character": 4,
        "line": 9
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/module_method.rb"
  },
  {
    "range": {
      "end": {
        "character": 27,
        "line": 3
      },
      "start": {
        "character": 4,
        "line": 3
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/module_method.rb"
  },
  {
    "range": {
      "end": {
        "character": 16,
        "line": 9
      },
      "start": {
        "character": 4,
        "line": 9
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/module_method.rb"
  }
]
