src/test/snapshots/ruby_fast_lsp__test__integration_test__loggable_log_method_refs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 32,
        "line": 23
      },
      "start": {
        "character": 4,
        "line": 23
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/module_with_methods.rb"
  },
  {
    "range": {
      "end": {
        "character": 32,
        "line": 23
      },
      "start": {
        "character": 4,
        "line": 23
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/module_with_methods.rb"
  },
  {
    "range": {
      "end": {
        "character": 32,
        "line": 23
      },
      "start": {
        "character": 4,
        "line": 23
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/module_with_methods.rb"
  }
]
