src/test/snapshots/ruby_fast_lsp__test__integration_test__method_from_a_def_in_outer_module_a.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 21,
        "line": 2
      },
      "start": {
        "character": 8,
        "line": 2
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/nested_namespace_include.rb"
  }
]
