src/test/snapshots/ruby_fast_lsp__test__integration_test__method_from_a_def_instance_call.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 19,
        "line": 1
      },
      "start": {
        "character": 6,
        "line": 1
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/module_method_cross_ref.rb"
  }
]
