src/test/snapshots/ruby_fast_lsp__test__integration_test__method_from_b_def_in_module_b_from_class.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 19,
        "line": 12
      },
      "start": {
        "character": 6,
        "line": 12
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/module_method_cross_ref.rb"
  }
]
