src/test/snapshots/ruby_fast_lsp__test__integration_test__method_in_default_arg.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 17,
        "line": 0
      },
      "start": {
        "character": 4,
        "line": 0
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/method_in_default_arg.rb"
  }
]
