src/test/snapshots/ruby_fast_lsp__test__integration_test__mixin_greet_method_def.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 11,
        "line": 25
      },
      "start": {
        "character": 6,
        "line": 25
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/mixin_definition.rb"
  },
  {
    "range": {
      "end": {
        "character": 11,
        "line": 33
      },
      "start": {
        "character": 6,
        "line": 33
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/mixin_definition.rb"
  }
]
