src/test/snapshots/ruby_fast_lsp__test__integration_test__mixin_log_method_def.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 9,
        "line": 1
      },
      "start": {
        "character": 6,
        "line": 1
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/mixin_definition.rb"
  }
]
